[gd_scene load_steps=22 format=3 uid="uid://bo4jhlrkqyi7t"]

[ext_resource type="Texture2D" uid="uid://burseqo854hpf" path="res://assets/background/academia-background.png" id="1_jo0xd"]
[ext_resource type="Script" uid="uid://cqrgjvubiojbq" path="res://scripts/telas/login.gd" id="1_v8w3r"]
[ext_resource type="Texture2D" uid="uid://bo4oap4lyjvu3" path="res://assets/ui/botoes/planilha.png" id="2_v8w3r"]
[ext_resource type="Script" uid="uid://cxw1lfymgf1wq" path="res://scripts/telas/senha_vis√≠vel.gd" id="3_141pm"]
[ext_resource type="FontFile" uid="uid://0lorj40s1j2h" path="res://fontes/FONT_UI.TTF" id="4_tfgpk"]
[ext_resource type="Texture2D" uid="uid://nimbrl5cby15" path="res://assets/ui/botoes/button.png" id="5_7c8r3"]
[ext_resource type="Texture2D" uid="uid://c0yrkkx0me73g" path="res://assets/ui/botoes/botao_voltar.png" id="6_8f3rf"]
[ext_resource type="FontFile" uid="uid://bxeo40x4iy0av" path="res://fontes/ari-w9500-bold.ttf" id="6_tfgpk"]
[ext_resource type="Texture2D" uid="uid://e14n0yht4mhg" path="res://assets/ui/botoes/olho_aberto.png" id="7_awnh1"]
[ext_resource type="PackedScene" uid="uid://clkmuf3bqcjpt" path="res://telas/tela_carregamento.tscn" id="9_141pm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_141pm"]
texture = ExtResource("1_jo0xd")
modulate_color = Color(0.462291, 0.462291, 0.462291, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuf3j"]
bg_color = Color(0.937255, 0.937255, 0.933333, 0.580392)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfgpk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_00hno"]
texture = ExtResource("5_7c8r3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d56m4"]
texture = ExtResource("5_7c8r3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uaou3"]
texture = ExtResource("5_7c8r3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_141pm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x62lj"]
texture = ExtResource("6_8f3rf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pwy0f"]
texture = ExtResource("6_8f3rf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_whmrq"]
texture = ExtResource("6_8f3rf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yksvn"]
texture = ExtResource("6_8f3rf")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8w3r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_141pm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -431.0
offset_top = -426.0
offset_right = 431.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v8w3r")
script = ExtResource("3_141pm")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -255.0
offset_right = 156.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 40
text = "LOGIN"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(30, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.764495, 0.0543083, 0.0876316, 1)
theme_override_fonts/font = ExtResource("6_tfgpk")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label_Email" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 30
text = "Email"

[node name="Email" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_yuf3j")
placeholder_text = "Insira seu nome"

[node name="Label_Senha" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 30
text = "Senha"

[node name="Senha" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_yuf3j")
placeholder_text = "Insira seu nome"
secret = true

[node name="LoginBtn" type="Button" parent="NinePatchRect/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 29
theme_override_styles/focus = SubResource("StyleBoxEmpty_tfgpk")
theme_override_styles/hover = SubResource("StyleBoxTexture_00hno")
theme_override_styles/pressed = SubResource("StyleBoxTexture_d56m4")
theme_override_styles/normal = SubResource("StyleBoxTexture_uaou3")
text = "ENVIAR"

[node name="VoltarBtn" type="Button" parent="NinePatchRect"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 931.0
offset_top = 84.0
offset_right = 1036.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 29
theme_override_styles/focus = SubResource("StyleBoxEmpty_141pm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_x62lj")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_pwy0f")
theme_override_styles/hover = SubResource("StyleBoxTexture_whmrq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_whmrq")
theme_override_styles/normal = SubResource("StyleBoxTexture_yksvn")

[node name="StatusLabel" type="Label" parent="NinePatchRect/VoltarBtn"]
custom_minimum_size = Vector2(30, 80)
layout_mode = 0
theme_override_colors/font_color = Color(0.764495, 0.0543083, 0.0876316, 1)
theme_override_fonts/font = ExtResource("4_tfgpk")
theme_override_font_sizes/font_size = 15
text = "


"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 589.0
offset_top = 467.0
offset_right = 633.0
offset_bottom = 498.0
texture_normal = ExtResource("7_awnh1")
texture_pressed = ExtResource("7_awnh1")
texture_hover = ExtResource("7_awnh1")
ignore_texture_size = true
stretch_mode = 0

[node name="tela_carregamento" parent="." instance=ExtResource("9_141pm")]
visible = false
